# LesionShiftAI

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: baseline_cnn.yml  vit_b16.yml
docs/: lesionshiftai-inception.md
run/: __main__.py
scripts/: build_pyz.py  smoke_data_pipeline.py  train_baseline_cnn.py  train_ensemble_member_cnn.py  train_vit.py
scripts/hpc/: train_baseline_cnn.sh  train_ensemble_cnn.sh  train_vit.sh
src/lesionshiftai/core/: config.py  distributed.py  reproducibility.py  runtime.py
src/lesionshiftai/data/: __init__.py  datamodule.py  dataset.py  labels.py  metadata.py  split.py  transforms.py
src/lesionshiftai/eval/: evaluator.py  metrics.py
src/lesionshiftai/models/: cnn.py  vit.py
src/lesionshiftai/train/: engine.py
