[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesionshiftai"
version = "0.1.0"
description = "Cross-dataset skin lesion classification benchmark for CNNs, ensembles, and Vision Transformers."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jeffrey Hoelzel Jr." }
]
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.4,<2.5",
    "torchvision>=0.19,<0.20",
    "torchaudio>=2.4,<2.5",
    "timm>=1.0",
    "albumentations>=2",
    "opencv-python-headless>=4.9",
    "numpy>=2,<3",
    "pandas>=2.3",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "jupyter>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
